Fix spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,6 +20,7 @@ a {
 
 a:hover {
 	text-decoration: underline;
+	color: #79cdcd;
 }
 
 
@@ -29,8 +30,13 @@ a:hover {
     $HEADER
 \*------------------------------------*/
 
+.logo {
+	font-size: 0.75em;
+	margin: 4em 0 0 0;
+}
+
 nav {
-	margin: 4em 0;
+	margin: 0 0 4em 0;
 }
 
 nav ul {
@@ -41,7 +47,7 @@ nav ul {
 
 nav li {
 	display: inline;
-	padding: 0 1em  0 0;
+	padding: 0 1em 0 0;
 	text-align: center;
 	font-weight: bold;
 }
@@ -58,10 +64,12 @@ nav li a {
     $CONTENT
 \*------------------------------------*/
 
-.stub ul {
-	list-style: none;
+.stub {
+	margin: 0 0 4em 0;
+}
+
+.stub:last-child {
 	margin: 0;
-	padding: 0;
 }
 
 
@@ -74,6 +82,6 @@ footer {
 	bottom: 0;
 	width: 100%;
 	font-size: 0.8em;
-	margin: 4em 0;
 	text-align: center;
+	margin: 5em 0;
 }
